--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
@@ -95,8 +95,8 @@
           <target state="translated">Passwort oder geheimer Merksatz:</target>
         </trans-unit>
         <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
-          <source>{0} of {1} Unicode Characters</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} von {1} Unicode-Zeichen</target>
+          <source>{0} significant Unicode Characters</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} von {1} Unicode-Zeichen</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
         </trans-unit>
         <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
           <source>Read more about</source>
@@ -227,9 +227,9 @@
           <source>OK</source>
           <target state="new">OK</target>
         </trans-unit>
-        <trans-unit id="Resx/spd_btntext_ClearPWFromMemory" translate="yes" xml:space="preserve">
-          <source>Clear Session Password</source>
-          <target state="new">Clear Session Password</target>
+        <trans-unit id="Resx/termClearPassword" translate="yes" xml:space="preserve">
+          <source>Clear Password</source>
+          <target state="new">Clear Password</target>
         </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
