--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.de.xlf
@@ -8,7 +8,7 @@
       <group id="Resx">
         <trans-unit id="Resx/constUntitledDotVisualCrypt" translate="yes" xml:space="preserve">
           <source>Untitled.visualcrypt</source>
-          <target state="translated">Unbenannt.visualcrypt</target>
+          <target state="signed-off">Unbenannt.visualcrypt</target>
         </trans-unit>
         <trans-unit id="Resx/encrpytedStatusbarText" translate="yes" xml:space="preserve">
           <source>VisualCrypt {0}, AES 256 Bit, 2^{1} Rounds , {2} Ch.</source>
@@ -96,16 +96,16 @@
         </trans-unit>
         <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
           <source>{0} significant Unicode Characters</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} von {1} Unicode-Zeichen</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="signed-off">{0} signifikante Unicode-Zeichen</target>
+          </trans-unit>
         <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
           <source>Read more about</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Weitere Informationen über</target>
         </trans-unit>
         <trans-unit id="Resx/spd_text_from256BitRD" translate="yes" xml:space="preserve">
           <source>(256 Bit Random Data)</source>
-          <target state="needs-review-translation">(256 Bit Zufallszahl)</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="signed-off">(256 Bit Zufallszahl)</target>
+          </trans-unit>
         <trans-unit id="Resx/spd_msgUseEmptyPassword" translate="yes" xml:space="preserve">
           <source>Use empty password?</source>
           <target state="translated">Leeres Passwort verwenden?</target>
@@ -145,7 +145,7 @@
         </trans-unit>
         <trans-unit id="Resx/spdm_SetAndDecryptLoadedFile_Title" translate="yes" xml:space="preserve">
           <source>Enter password to decrypt loaded file</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort zum Entschlüsseln der Datei</target>
+          <target state="signed-off">Passwort zum Entschlüsseln der Datei</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_SetAndDecryptLoadedFile_OK" translate="yes" xml:space="preserve">
           <source>Decrypt loaded file</source>
@@ -153,7 +153,7 @@
         </trans-unit>
         <trans-unit id="Resx/spdm_CorrectPassword_Title" translate="yes" xml:space="preserve">
           <source>The current password is not correct</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Das aktuelle Kennwort ist nicht korrekt</target>
+          <target state="signed-off">Das aktuelle Passwort ist nicht korrekt</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_CorrectPassword_OK" translate="yes" xml:space="preserve">
           <source>Change Password and decrypt</source>
@@ -161,11 +161,11 @@
         </trans-unit>
         <trans-unit id="Resx/spdm_Change_Title" translate="yes" xml:space="preserve">
           <source>Change Password</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+          <target state="signed-off">Passwort ändern</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_Change_OK" translate="yes" xml:space="preserve">
           <source>Change Password</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+          <target state="signed-off">Passwort ändern</target>
         </trans-unit>
         <trans-unit id="Resx/termBinary" translate="yes" xml:space="preserve">
           <source>Binary File</source>
@@ -181,7 +181,7 @@
         </trans-unit>
         <trans-unit id="Resx/termChangePassword" translate="yes" xml:space="preserve">
           <source>Change Password</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Kennwort ändern</target>
+          <target state="signed-off">Passwort ändern</target>
         </trans-unit>
         <trans-unit id="Resx/termClear" translate="yes" xml:space="preserve">
           <source>Clear</source>
@@ -225,11 +225,19 @@
         </trans-unit>
         <trans-unit id="Resx/termOK" translate="yes" xml:space="preserve">
           <source>OK</source>
-          <target state="new">OK</target>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">OK</target>
         </trans-unit>
         <trans-unit id="Resx/termClearPassword" translate="yes" xml:space="preserve">
           <source>Clear Password</source>
-          <target state="new">Clear Password</target>
+          <target state="signed-off">Passwort löschen</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFormatError" translate="yes" xml:space="preserve">
+          <source>Invalid VisualCrypt format - Cannot decrypt this.</source>
+          <target state="needs-review-translation">Ungültiges VisualCrypt-Format - nicht entschlüsselbar.</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+        <trans-unit id="Resx/msgInvalidFilename" translate="yes" xml:space="preserve">
+          <source>Invalid Filename.</source>
+          <target state="signed-off">Ungültiger Dateiname.</target>
         </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
@@ -301,7 +309,7 @@
         </trans-unit>
         <trans-unit id="Resx/termEncrypt" translate="yes" xml:space="preserve">
           <source>Encrypt</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Verschlüsseln</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="signed-off" state-qualifier="mt-suggestion">Verschlüsseln</target>
           </trans-unit>
         <trans-unit id="Resx/termDecrypt" translate="yes" xml:space="preserve">
           <source>Decrypt</source>
@@ -317,13 +325,11 @@
         </trans-unit>
         <trans-unit id="Resx/plaintextStatusbarText" translate="yes" xml:space="preserve">
           <source>Plaintext | {0} | {1}</source>
-          <target state="needs-review-translation">Klartext | {0} | {1}</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="signed-off">Klartext | {0} | {1}</target>
           </trans-unit>
         <trans-unit id="Resx/plaintextStatusbarPositionInfo" translate="yes" xml:space="preserve">
           <source>Ln {0}, Col {1} | Pos {2}/{3}</source>
-          <target state="needs-review-translation">Zeile {0}, Sp {1} | Pos {2}/{3}</target>
-          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          <target state="signed-off">Zeile {0}, Sp {1} | Pos {2}/{3}</target>
           </trans-unit>
         <trans-unit id="Resx/operationEncryption" translate="yes" xml:space="preserve">
           <source>Encrypting:</source>
@@ -335,8 +341,8 @@
         </trans-unit>
         <trans-unit id="Resx/operationDecryptOpenedFile" translate="yes" xml:space="preserve">
           <source>Decrypting loaded file:</source>
-          <target state="needs-review-translation">Entschlüsseln der ladenden Datei:</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="signed-off">Entschlüsseln der ladenden Datei:</target>
+          </trans-unit>
         <trans-unit id="Resx/operationDecryption" translate="yes" xml:space="preserve">
           <source>Decrypting:</source>
           <target state="translated">Entschlüsseln:</target>
