--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.xlf
@@ -97,16 +97,16 @@
         </trans-unit>
         <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
           <source>{0} significant Unicode Characters</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} di {1} caratteri Unicode</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} di {1} caratteri Unicode</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
           <source>Read more about</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Per ulteriori informazioni su</target>
         </trans-unit>
         <trans-unit id="Resx/spd_text_from256BitRD" translate="yes" xml:space="preserve">
           <source>(256 Bit Random Data)</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">da 256 Bit di dati casuali</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">da 256 Bit di dati casuali</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/spd_msgUseEmptyPassword" translate="yes" xml:space="preserve">
           <source>Use empty password?</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Utilizzare password vuota?</target>
@@ -229,7 +229,15 @@
         </trans-unit>
         <trans-unit id="Resx/termClearPassword" translate="yes" xml:space="preserve">
           <source>Clear Password</source>
-          <target state="new">Clear Password</target>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Cancella Password</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFormatError" translate="yes" xml:space="preserve">
+          <source>Invalid VisualCrypt format - Cannot decrypt this.</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Non valido formato 2 VisualCrypt: Impossibile decrittografare questo!</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+        </trans-unit>
+        <trans-unit id="Resx/msgInvalidFilename" translate="yes" xml:space="preserve">
+          <source>Invalid Filename.</source>
+          <target state="new">Invalid Filename.</target>
         </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
@@ -334,8 +342,8 @@
         </trans-unit>
         <trans-unit id="Resx/operationDecryptOpenedFile" translate="yes" xml:space="preserve">
           <source>Decrypting loaded file:</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Decrittografare il file aperto:</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Decrittografare il file aperto:</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/operationDecryption" translate="yes" xml:space="preserve">
           <source>Decrypting:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">La decrittografia:</target>
