--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.ru.xlf
@@ -8,7 +8,7 @@
       <group id="Resx">
         <trans-unit id="Resx/constUntitledDotVisualCrypt" translate="yes" xml:space="preserve">
           <source>Untitled.visualcrypt</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Untitled.visualcrypt</target>
+          <target state="translated">Без названия.visualcrypt</target>
         </trans-unit>
         <trans-unit id="Resx/encrpytedStatusbarText" translate="yes" xml:space="preserve">
           <source>VisualCrypt {0}, AES 256 Bit, 2^{1} Rounds , {2} Ch.</source>
@@ -95,31 +95,31 @@
         </trans-unit>
         <trans-unit id="Resx/spd_msgXofYUnicodeChars" translate="yes" xml:space="preserve">
           <source>{0} significant Unicode Characters</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">{0} из {1} знаков Юникода</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="translated">{0} значащие символы Юникода</target>
+          </trans-unit>
         <trans-unit id="Resx/spd_text_ReadMoreAbout" translate="yes" xml:space="preserve">
           <source>Read more about</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Дополнительные сведения о</target>
+          <target state="translated" state-qualifier="mt-suggestion">Дополнительные сведения о</target>
         </trans-unit>
         <trans-unit id="Resx/spd_text_from256BitRD" translate="yes" xml:space="preserve">
           <source>(256 Bit Random Data)</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">с 256-битным случайных данных</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="translated">(256 бит случайных данных)</target>
+          </trans-unit>
         <trans-unit id="Resx/spd_msgUseEmptyPassword" translate="yes" xml:space="preserve">
           <source>Use empty password?</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Использовать пустой пароль?</target>
+          <target state="translated" state-qualifier="mt-suggestion">Использовать пустой пароль?</target>
         </trans-unit>
         <trans-unit id="Resx/spd_msgPasswordEffectivelyEmpty" translate="yes" xml:space="preserve">
           <source>The password is effectively empty - are you sure?</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Пароль пуст эффективно - вы уверены?</target>
+          <target state="translated" state-qualifier="mt-suggestion">Пароль пуст эффективно - вы уверены?</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_Set_OK" translate="yes" xml:space="preserve">
           <source>Set Password</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Установка пароля</target>
+          <target state="translated" state-qualifier="mt-suggestion">Установка пароля</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_SetAndEncrypt_Title" translate="yes" xml:space="preserve">
           <source>Set Password %%amp; Encrypt</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Зашифровать пароль набора %%amp;</target>
+          <target state="final">Установить пароль и зашифровать</target>
         </trans-unit>
         <trans-unit id="Resx/spdm_SetAndEncrypt_OK" translate="yes" xml:space="preserve">
           <source>Encrypt</source>
@@ -227,7 +227,14 @@
         </trans-unit>
         <trans-unit id="Resx/termClearPassword" translate="yes" xml:space="preserve">
           <source>Clear Password</source>
-          <target state="new">Clear Password</target>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Снять пароль</target>
+        </trans-unit>
+        <trans-unit id="Resx/msgFormatError" translate="yes" xml:space="preserve">
+          <source>Invalid VisualCrypt format - Cannot decrypt this.</source>
+          <target state="final" state-qualifier="mt-suggestion">Недопустимый формат VisualCrypt 2 - не удается расшифровать это!</target></trans-unit>
+        <trans-unit id="Resx/msgInvalidFilename" translate="yes" xml:space="preserve">
+          <source>Invalid Filename.</source>
+          <target state="new">Invalid Filename.</target>
         </trans-unit>
         <trans-unit id="Resx/sett_warn_neutral" translate="yes" xml:space="preserve">
           <source>The setting influences the required computational work to create the BCrypt hash. A higher value means more work.</source>
@@ -299,8 +306,9 @@
         </trans-unit>
         <trans-unit id="Resx/termEncrypt" translate="yes" xml:space="preserve">
           <source>Encrypt</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Шифрование!</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Шифрование!</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
+          </trans-unit>
         <trans-unit id="Resx/termDecrypt" translate="yes" xml:space="preserve">
           <source>Decrypt</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Расшифровка</target>
@@ -331,8 +339,8 @@
         </trans-unit>
         <trans-unit id="Resx/operationDecryptOpenedFile" translate="yes" xml:space="preserve">
           <source>Decrypting loaded file:</source>
-          <target state="needs-review-translation" state-qualifier="mt-suggestion">Расшифровка открываемый файл:</target><note from="MultilingualUpdate" priority="2" annotates="source">Please verify the translation’s accuracy as the source string was updated after it was translated.</note>
-        </trans-unit>
+          <target state="final" state-qualifier="mt-suggestion">Расшифровка открываемый файл:</target>
+          </trans-unit>
         <trans-unit id="Resx/operationDecryption" translate="yes" xml:space="preserve">
           <source>Decrypting:</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Расшифровка:</target>
