--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.it.resx
@@ -487,15 +487,18 @@
   </data>
   <data name="fnt_label_typeFace" xml:space="preserve">
     <value>_Typeface:</value>
+    <comment></comment>
   </data>
   <data name="fnt_labelSize" xml:space="preserve">
     <value>_Size:</value>
+    <comment></comment>
   </data>
   <data name="fnt_labelPreview" xml:space="preserve">
     <value>Anteprima:</value>
   </data>
   <data name="fnt_labelFontFamilies" xml:space="preserve">
     <value>Famiglia _Font:</value>
+    <comment></comment>
   </data>
   <data name="termOK" xml:space="preserve">
     <value>OK</value>
