--- a/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language/Strings/Resources.fr.resx
@@ -487,15 +487,18 @@
   </data>
   <data name="fnt_label_typeFace" xml:space="preserve">
     <value>_Typeface :</value>
+    <comment></comment>
   </data>
   <data name="fnt_labelSize" xml:space="preserve">
     <value>_Size :</value>
+    <comment></comment>
   </data>
   <data name="fnt_labelPreview" xml:space="preserve">
     <value>Aperçu :</value>
   </data>
   <data name="fnt_labelFontFamilies" xml:space="preserve">
     <value>Famille de _Font :</value>
+    <comment></comment>
   </data>
   <data name="termOK" xml:space="preserve">
     <value>OK</value>
